--- a/public/about/index.html
+++ b/public/about/index.html
@@ -210,27 +210,27 @@ File - Projects</p></blockquote></blockquote></blockquote>
 
 		<article class="relative group flex flex-row">
 	<a class="insert-link" href="http://localhost:1313/Time-Series-Team-Hub/posts/2025/week-1/"></a>
-	<figure class="basis-1/3 aspect-square overflow-hidden rounded-2xl bg-zinc-100"><img class="object-cover h-full w-full group-hover:scale-105 transition duration-500 cursor-pointer" src="http://localhost:1313/Time-Series-Team-Hub/images/nasa-Ed2AELHKYBw-unsplash_hu_1a918ae992f9d2a7.jpg" alt="Tuần 1 – Blog của Team Time Series" width="250" height="250">
+	<figure class="basis-1/3 aspect-square overflow-hidden rounded-2xl bg-zinc-100"><img class="object-cover h-full w-full group-hover:scale-105 transition duration-500 cursor-pointer" src="http://localhost:1313/Time-Series-Team-Hub/images/nasa-Ed2AELHKYBw-unsplash_hu_1a918ae992f9d2a7.jpg" alt="Tuần 1 - Phương pháp nghiên cứu và lập trình cơ bản cho Python và SQL" width="250" height="250">
 
 	</figure>
 	<div class="basis-2/3 self-center ml-4">
-		<h3 class="font-bold group-hover:underline decoration-auto">Tuần 1 – Blog của Team Time Series</h3>
+		<h3 class="font-bold group-hover:underline decoration-auto">Tuần 1 - Phương pháp nghiên cứu và lập trình cơ bản cho Python và SQL</h3>
 	</div>
 </article><article class="relative group flex flex-row">
 	<a class="insert-link" href="http://localhost:1313/Time-Series-Team-Hub/posts/2025/week-2/"></a>
-	<figure class="basis-1/3 aspect-square overflow-hidden rounded-2xl bg-zinc-100"><img class="object-cover h-full w-full group-hover:scale-105 transition duration-500 cursor-pointer" src="http://localhost:1313/Time-Series-Team-Hub/images/brent-cox-ydGRmobx5jA-unsplash_hu_15a96ce260027332.jpg" alt="Tuần 2 – Blog của Team Time Series" width="250" height="250">
+	<figure class="basis-1/3 aspect-square overflow-hidden rounded-2xl bg-zinc-100"><img class="object-cover h-full w-full group-hover:scale-105 transition duration-500 cursor-pointer" src="http://localhost:1313/Time-Series-Team-Hub/images/brent-cox-ydGRmobx5jA-unsplash_hu_15a96ce260027332.jpg" alt="Tuần 2 – Bộ ba Data Structure, Git và Database" width="250" height="250">
 
 	</figure>
 	<div class="basis-2/3 self-center ml-4">
-		<h3 class="font-bold group-hover:underline decoration-auto">Tuần 2 – Blog của Team Time Series</h3>
+		<h3 class="font-bold group-hover:underline decoration-auto">Tuần 2 – Bộ ba Data Structure, Git và Database</h3>
 	</div>
 </article><article class="relative group flex flex-row">
 	<a class="insert-link" href="http://localhost:1313/Time-Series-Team-Hub/posts/2025/week-3/"></a>
-	<figure class="basis-1/3 aspect-square overflow-hidden rounded-2xl bg-zinc-100"><img class="object-cover h-full w-full group-hover:scale-105 transition duration-500 cursor-pointer" src="http://localhost:1313/Time-Series-Team-Hub/images/daniele-colucci-OtXJhYjbKeg-unsplash_hu_80af46dca1175f28.jpg" alt="Tuần 3 – Blog của Team Time Series" width="250" height="250">
+	<figure class="basis-1/3 aspect-square overflow-hidden rounded-2xl bg-zinc-100"><img class="object-cover h-full w-full group-hover:scale-105 transition duration-500 cursor-pointer" src="http://localhost:1313/Time-Series-Team-Hub/images/daniele-colucci-OtXJhYjbKeg-unsplash_hu_80af46dca1175f28.jpg" alt="Tuần 3 – Cặp đôi OOP và Data Structure" width="250" height="250">
 
 	</figure>
 	<div class="basis-2/3 self-center ml-4">
-		<h3 class="font-bold group-hover:underline decoration-auto">Tuần 3 – Blog của Team Time Series</h3>
+		<h3 class="font-bold group-hover:underline decoration-auto">Tuần 3 – Cặp đôi OOP và Data Structure</h3>
 	</div>
 </article>
 		
